# fiber-raman-suppression

./: .dockerignore  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  Manifest.toml  Project.toml  README.md  RESULTS_SUMMARY.md  companion_explainer.tex  fiberlab  llms.txt  pyproject.toml  research_findings_amplitude.md  research_findings_visualization.md  verification_document.tex
.gsd/: CODEBASE.md  DECISIONS.md  KNOWLEDGE.md  PROJECT.md  REQUIREMENTS.md  STATE.md  notifications.jsonl
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
agent-docs/: README.md  repo-diet.md
data/: 251120_data_f_vs_p.csv  F_vs_P.csv  README.md  plotFvsP.jl
docs/: README.md  adding-a-fiber-preset.md  adding-an-optimization-variable.md  companion_explainer.tex  cost-convention.md  cost-function-physics.md  installation.md  interpreting-plots.md  multimode-baseline-status-2026-04-22.md  output-format.md  phase-30-status.md  phase-32-status.md  phase-34-bounded-rerun-status.md  phase-34-preconditioning-caveat.md  physics_verification.tex  quickstart-optimization.md  quickstart-sweep.md  recent-phase-synthesis-29-34.md  research-verdicts.md  verification_document.tex
examples/: 01_raman_band_suppression.ipynb  01_red_band_objective.ipynb  02_multivariable_controls.ipynb  03_multimode_mode_sum.ipynb  04_reduced_basis_phase.ipynb  05_counterfactual_raman.jl  README.md
fibers/: DispersiveFiber_GRIN_r=3.50_M=1_λ0=1.55um_Nt=4096_time_window=10.00ps_nx=200_Nbeta=4.npz  README.md  (+18 more)
notebooks/: EDFA.ipynb  MultiModeNoise_DispMMF_test.ipynb  README.md  (+7 more)
(+1537 files in other folders)
